@@ -1,4 +1,5 @@
 Verion 0.9.44dev (?? ??? 2004)
+  - Patch 975554: event end time as an option (rather than just duration)
   - Patch 972695: in edit_entry.php, use preferences to determine
     if repeat info starts on sun/mon
   - Patch 972602: Missing translation in pref.php for language
